--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,7 @@
 <div class="user">
   <div class="tech">
     <h2>Scout - Godjira</h2>
-    <img src="1500x500.jfif" alt="Scout - Godjira">
+    <img src="1500x500.jfif" alt="Scout - Godjira" style="width:128px;height:128px;">
     <a href="https://twitter.com/PGodjira">PGodjira</a>
   </div>
   <div class="tech">
