--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,9 +4,9 @@
 </div>
 <div class="user">
   <div class="tech">
-    <h2>Scout - Godjira</h2>
-    <img src="1500x500.jfif" alt="Scout - Godjira" style="width:128px;height:128px;">
-    <a href="https://twitter.com/PGodjira">PGodjira</a>
+    <h2><a href="https://twitter.com/PGodjira">Scout - Godjira</a></h2>
+    <img src="1500x500.jfif" alt="Scout - Godjira" style="width:256px;height:128px;">
+
   </div>
   <div class="tech">
     <h2>Phoienix ( Sold Out )</h2>
@@ -82,6 +82,8 @@
     </svg>
     <p>Git, Gulp, Grunt, NPM, Linux, Docker, you name it, I have used a bajillion tools!</p>
   </div>
+</div>
+<div class="user">
 
   <div class="tech">
     <h2>Test</h2>
