--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,6 +6,7 @@
   <div class="tech">
     <h2><a href="https://twitter.com/PGodjira">Scout - Godjira</a></h2>
     <img src="1500x500.jfif" alt="Scout - Godjira" style="width:256px;height:128px;">
+    <p>Description</p>
 
   </div>
   <div class="tech">
