--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,7 +37,7 @@
       {% endif %}
       {% if site.discord_username %}
       <a aria-label="My Discord" target="_blank" href="https://www.discordapp.com/users/{{ site.discord_username }}"><i
-          class="icon fa-brands fa-discord" aria-hidden="true"></i></a>
+          class="icon fa fa-discord" aria-hidden="true"></i></a>
       {% endif %}
     </div>
     <div class="header-links">
