--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
       {% endif %}
       {% if site.twitter_username %}
       <a aria-label="My Twitter" target="_blank" href="https://twitter.com/{{ site.twitter_username }}"><i
-          class="icon fa fa-twitter" aria-hidden="true"></i></a>
+          class="icon fa-brands fa-twitter" aria-hidden="true"></i></a>
       {% endif %}
       {% if site.instagram_username %}
       <a aria-label="My Instagram" target="_blank" href="https://www.instagram.com/{{ site.instagram_username }}"><i
@@ -27,17 +27,9 @@
       {% if site.github_username %}
       <a aria-label="My Github" target="_blank" href="https://github.com/{{ site.github_username }}"><i
           class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-      {% endif %}
-      {% if site.medium_username %}
-      <a aria-label="My Medium" target="_blank" href="https://medium.com/{{ site.medium_username }}"><i
-          class="icon fa fa-medium" aria-hidden="true"></i></a>
-      {% elsif site.medium_url %}
-      <a aria-label="My Medium" target="_blank" href="https://{{ site.medium_url }}"><i class="icon fa fa-medium"
-          aria-hidden="true"></i></a>
-      {% endif %}
       {% if site.discord_username %}
       <a aria-label="My Discord" target="_blank" href="https://www.discordapp.com/users/{{ site.discord_username }}"><i
-          class="icon fa-solid fa-discord" aria-hidden="true"></i></a>
+          class="icon fa-brands fa-discord" aria-hidden="true"></i></a>
       {% endif %}
     </div>
     <div class="header-links">
