--- a/_includes/about.html
+++ b/_includes/about.html
@@ -39,5 +39,21 @@
       And I will be working on the project for next 1 month ( Do dm me if you are looking )
       for a collab</p>
   </div>
+  <div class="tech">
+
+    <h2><a href="https://twitter.com/FlareMcs">Collab Manager Flare MC</a></h2>
+    <img src="1500x500.jfif" alt="Internal Collab Manager Flare MC" style="width:256px;height:128px;">
+    <p>This is very similar post like Godjira but promoted level, I work here as
+      a Internal collab manager where I bring wl spots from other projects, decide
+      mutual spots count and also the execution part is under me. The community is
+      super active and I have done multiple collabs and I will be working on the team
+      for an unforseen future</p>
+  </div>
+
+  <div class="tech">
+
+    <p> Coming soon</p>
+
+  </div>
 
 </div>
