--- a/_includes/about.html
+++ b/_includes/about.html
@@ -52,7 +52,18 @@
 
   <div class="tech">
 
-    <p> Coming soon</p>
+    <h2><a href="https://twitter.com/thatsstupidNFT">Collab Manager Stupid</a></h2>
+    <img src="1500x500.jfif" alt="Lead Collab Manager & Advisor " style="width:256px;height:128px;">
+    <p>Same work as Lookswhale + I also help with mint price, mint date, what to post on twitter how to do it and soo
+      onn </p>
+  </div>
+
+  <div class="tech">
+
+    <h2><a href="https://twitter.com/OutcastsSociety">Lead Collab Manager OutcastSociety</a></h2>
+    <img src="1500x500.jfif" alt="Lead Collab Manager Outcast Society" style="width:256px;height:128px;">
+    <p>Same work as Stupids and Lookswhale, I am lead collab manager but not Advisor, This project is cancelled for now
+      as the founder is working on something very big so he has to postpone it.</p>
 
   </div>
 
