--- a/_includes/about.html
+++ b/_includes/about.html
@@ -57,6 +57,8 @@
     <p>Same work as Lookswhale + I also help with mint price, mint date, what to post on twitter how to do it and soo
       onn </p>
   </div>
+</div>
+<div class="user">
 
   <div class="tech">
 
@@ -65,6 +67,15 @@
     <p>Same work as Stupids and Lookswhale, I am lead collab manager but not Advisor, This project is cancelled for now
       as the founder is working on something very big so he has to postpone it.</p>
 
+  </div>
+
+  <div class="tech">
+    <h2><a href="https://twitter.com/tentaculars">Lead Collab Manager & Advisor Tentacularsy</a></h2>
+    <img src="1500x500.jfif" alt="Lead Collab Manager Outcast Society" style="width:256px;height:128px;">
+    <p>Same work as Stupids and Lookswhale & Outcast Society I am lead collab manager and also Advisor,
+      The project is to be expected to mint around end of September.
+      My work is to advice the founder with mint price, mint date,
+      social media strategy and any other possible advise needed for the project </p>
   </div>
 
 </div>
