--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,12 +6,16 @@
   <div class="tech">
     <h2><a href="https://twitter.com/PGodjira">Scout - Godjira</a></h2>
     <img src="1500x500.jfif" alt="Scout - Godjira" style="width:256px;height:128px;">
-    <p>Description</p>
+    <p>I am proud to say this that I am part of Project Godjira Collab Team as a
+      Scout it is a big deal to be in part of the team. I am really grateful to Groot for
+      seeing something in me and giving me the opportunity. I basically bring wl spots
+      from other projects/early project to discussion with Brand Officers.</p>
 
   </div>
   <div class="tech">
     <h2><a href="https://twitter.com/LooksWhale">Lead Collab Manager - Lookswhale</a></h2>
-    <img src="1500x500.jfif" alt="Lead CM- Lookswhale" style="width:256px;height:128px;">
+    <img src="https://pbs.twimg.com/profile_banners/1544705098886127619/1659098170/1500x500" alt="Lead CM- Lookswhale"
+      style="width:256px;height:128px;">
     <p>I have worked closely with the founder from when the project was 0, I was the lead
       and sole collab manager, I managed to do 65 + collabs in just time span of 4 weeks
       These included one of the biggest communities in the space. The project has mint on
@@ -22,10 +26,11 @@
   <div class="tech">
 
     <h2><a href="https://twitter.com/thephoenixesnft">Collab Manager Phoenix</a></h2>
-    <img src="1500x500.jfif" alt="Collab Manager -Phoenix" style="width:256px;height:128px;">
+    <img src="https://pbs.twimg.com/profile_banners/1513608582704496640/1655657032/1500x500"
+      alt="Collab Manager -Phoenix" style="width:256px;height:128px;">
     <p>I got in as collab manager very late just 72hrs before the mint but
       even with such a less time period, I managed to close 12 big collabs in just 48hrs
-      one of the biggest and most reputated communities in the space! </p>
+      one of the biggest and most reputed communities in the space! </p>
   </div>
 </div>
 <div class="user">
@@ -47,7 +52,7 @@
       a Internal collab manager where I bring wl spots from other projects, decide
       mutual spots count and also the execution part is under me. The community is
       super active and I have done multiple collabs and I will be working on the team
-      for an unforseen future</p>
+      for an unforeseen future</p>
   </div>
 
   <div class="tech">
