--- a/_includes/about.html
+++ b/_includes/about.html
@@ -38,7 +38,8 @@
   <div class="tech">
 
     <h2><a href="https://twitter.com/SupercuteNFT">Collab Manager- Supercute</a></h2>
-    <img src="1500x500.jfif" alt="Collab Manager- Supercute" style="width:256px;height:128px;">
+    <img src="https://pbs.twimg.com/profile_banners/1544777722613956613/1661870536/1500x500"
+      alt="Collab Manager- Supercute" style="width:256px;height:128px;">
     <p>I am on the team as Collab Manager, the Mint is planned for early/mid October
       ,Assisting the founder/core team member with collabs. The Co-Founder is loving the work
       And I will be working on the project for next 1 month ( Do dm me if you are looking )
@@ -47,7 +48,8 @@
   <div class="tech">
 
     <h2><a href="https://twitter.com/FlareMcs">Collab Manager Flare MC</a></h2>
-    <img src="1500x500.jfif" alt="Internal Collab Manager Flare MC" style="width:256px;height:128px;">
+    <img src="https://pbs.twimg.com/profile_banners/1510358715085508621/1658419825/1500x500"
+      alt="Internal Collab Manager Flare MC" style="width:256px;height:128px;">
     <p>This is very similar post like Godjira but promoted level, I work here as
       a Internal collab manager where I bring wl spots from other projects, decide
       mutual spots count and also the execution part is under me. The community is
@@ -58,7 +60,8 @@
   <div class="tech">
 
     <h2><a href="https://twitter.com/thatsstupidNFT">Collab Manager Stupid</a></h2>
-    <img src="1500x500.jfif" alt="Lead Collab Manager & Advisor " style="width:256px;height:128px;">
+    <img src="https://pbs.twimg.com/profile_banners/1526898687452270594/1657512468/1500x500"
+      alt="Lead Collab Manager & Advisor " style="width:256px;height:128px;">
     <p>Same work as Lookswhale + I also help with mint price, mint date, what to post on twitter how to do it and soo
       onn </p>
   </div>
@@ -68,7 +71,8 @@
   <div class="tech">
 
     <h2><a href="https://twitter.com/OutcastsSociety">Lead Collab Manager OutcastSociety</a></h2>
-    <img src="1500x500.jfif" alt="Lead Collab Manager Outcast Society" style="width:256px;height:128px;">
+    <img src="https://pbs.twimg.com/profile_banners/1548238872949055488/1658934589/1500x500"
+      alt="Lead Collab Manager Outcast Society" style="width:256px;height:128px;">
     <p>Same work as Stupids and Lookswhale, I am lead collab manager but not Advisor, This project is cancelled for now
       as the founder is working on something very big so he has to postpone it.</p>
 
