--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
 
       {% if site.discord_username %}
       <a aria-label="My Discord" target="_blank" href="https://www.discordapp.com/users/{{ site.discord_username }}"><i
-          class="icon fa-brands fa-discord" data-fa-transform="left-6" aria-hidden="true"></i></a>
+          class="icon fa-brands fa-discord" data-fa-transform="shrink-8 left-10" aria-hidden="true"></i></a>
       {% endif %}
     </div>
     <div class="header-links">
