--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,24 @@
 <div class="user-details">
   <h1>My Expertise</h1>
-  <p>{{ site.user_description }}</p>
+
+  <p>
+    So, I am 17 yrs old, Commerce Student from India. I have been working in NFT space for some months now, I have
+    helped several projects some of the notable ones mentioned below. I am very systematic person, Hardworking, Hungry
+    to Achieve something big that's why grinding hard from this age!! I love to connect with new people and make friends
+    either it be web 2 or web . I am also Fond of music and Games and I have a gaming channel ( Only for my Web 2 FAM ).
+    This might be hypocritic but I love NFTs and hate NFTs at the same time, as I rarely mint any NFTs but I sell them
+    😂😂😂.
+  </p>
+  <br>
+  <p>I have great experience in working as a Lead Collab Manager /Collab Manager/Advisor for several projects. I have
+    helped my clients/projects get several collabs from the point when project is small to the point when it has become
+    huge due to the collabs and other marketing efforts. I have connections in one the the most notable projects/alpha
+    groups in the space, Total count of projects I am connected with would be 200 +. Many of the CMs in those
+    projects/alphas are my friends and dope people!! . Enough about me, I guess 😂. </p>
+  <br>
+  <p>If you are a client looking for 1 spot destination for Collabs then shoot a DM on discord/Twitter DM Me!! </p>
+  <p>If you are collab manager looking to do a collab contact my assistant SP17#9949 ( discord ).</p>
+
 </div>
 <div class="user">
   <div class="tech">
