--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1719,7 +1719,7 @@ body {
     padding: 0;
     font-size: 100%;
     line-height: 1.5;
-    color: #555;
+    color: rgb(22, 22, 22);
     font-family: 'Antic Slab', serif
 }
 
@@ -1999,7 +1999,7 @@ sup {
 .tech h3,
 .user-details h1,
 body {
-    font-weight: 400
+    font-weight: 500
 }
 
 .user {
